@@ -1,3 +1,7 @@
+2006-11-04T00:38  C.J. Adams-Collier <cjcollier@colliertech.org>
+	* placing AssemblyInfo.cs into Properties/
+	* Fixed double-mention of the package name
+
 2006-11-03T15:23  C.J. Adams-Collier <cjcollier@colliertech.org>
 	* corrected a problem in the Include.am generation code
 	* created the new .exe
